﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 1.004002, see misc/*.deps* for details
 - develop: +5 ↑1 -1 (suggests: ↑2)

1.004002 2015-03-06T23:08:04Z 81ea208
 [Dependencies::Stats]
 - Dependencies changed since 1.004001, see misc/*.deps* for details
 - configure: (recommends: ↓1)
 - develop: +3 ↑2 -1 (recommends: ↓1, suggests: ↑1)
 - runtime: (recommends: +1)
 - test: (recommends: +1 ↓2)

 [Internals]
 - Cleanup some residual cruft from de-autoboxing.

1.004001 2014-12-29T14:33:59Z 8a275b9
 [Bugfix]
 - Fix emitting 'null' for version in external file format.

 [Dependencies::Stats]
 - Dependencies changed since 1.004000, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 ↑1 (recommends: ↑1, suggests: ↑1)
 - runtime: ↓1 -1
 - test: ↓1 (recommends: ↑1)

 [Internals]
 - Slightly better code refactory in main loop.

1.004000 2014-12-14T08:34:41Z 24fbb48
 [Dependencies::Stats]
 - Dependencies changed since 1.003001, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +6 ↑1 -2 (recommends: +1, suggests: ↑2)
 - runtime: +3
 - test: +1 (recommends: ↑2)

 [Feature]
 - Can now remove the data from META.* and export into a single file on its own using 'use_external_file = only'.
 - File will be a name of user choice but defaults to 'misc/built_with.json'

1.003001 2014-09-24T06:28:04Z
 [Bugfix]
 - Don't call unname on devices where there is no uname.

 [Dependencies::Stats]
 - Dependencies changed since 1.003000, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: +1
 - test: (recommends: ↑1)

1.003000 2014-09-03T22:13:41Z
 [00 Minor]
 - Internals.
 - Tests.

 [Bugfix]
 - BuiltWith::All could crash trying to load some invalid module names it erroneously thought existed by traversing the
   global stash.

 [Dependencies::Stats]
 - Dependencies changed since 1.002000, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: +2
 - test: +2

 [Internals]