@@ -1,9 +1,12 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Removed DZTest stuff.
+
  [Dependencies::Stats]
  - Dependencies changed since 1.004002, see misc/*.deps* for details
  - develop: +5 ↑1 -1 (suggests: ↑2)
+ - test: -1
 
 1.004002 2015-03-06T23:08:04Z 81ea208
  [Dependencies::Stats]
